--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/shreyas.png" alt="Angela Picture">
       <h2>Hello.</h2>
-      <p>I'm a Student, Studying Computer Science Engineering in Dayananda Sagar College of Engineering  .</p>
+      <p class="student-details">I'm a Student, Studying Computer Science Engineering in Dayananda Sagar College of Engineering  .</p>
     </div>
     <hr class="header-ruler">
     <div class="skills">
