--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/shreyas.png" alt="Angela Picture">
+      <img src="images/shreyas.png" alt="Shreyas Picture">
       <h2>Hello.</h2>
-      <p class="student-details">I'm a Student, Studying Computer Science Engineering in DSCE,Bengaluru.</p>
+      <div><p class="student-details">I'm a Student, Studying Computer Science Engineering in DSCE,Benagluru.</p>  </div>
     </div>
     <hr class="header-ruler">
     <div class="skills">
@@ -56,7 +56,7 @@
     <a class="footer-link" href="https://www.instagram.com/shreyas_bharadhwaj/">Instagram</a>
     <a class="footer-link" href="https://www.facebook.com/profile.php?id=100009431621079">Facebook</a>
     <a class="footer-link" href="images/link.mp4">Website</a>
-    <p class="copyright">© Shreyas Bharadhwaj 2022.</p>
+    <p class="copyright">© 2022 Shreyas Bharadhwaj.</p>
   </div>
 
 
