--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/shreyas.png" alt="Shreyas Picture">
       <h2>Hello.</h2>
-      <div><p class="student-details">I'm a Student, Studying Computer Science Engineering in DSCE,Benagluru.</p>  </div>
+      <div><p class="student-details">I'm a Student, Studying Computer Science Engineering in DSCE,Bengaluru.</p>  </div>
     </div>
     <hr class="header-ruler">
     <div class="skills">
