--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class="computer" src="images/computer.png" alt="Computer-img">
         <h3>HTML & CSS</h3>
-        <p class="computer-skills">I can design websites for all the needs using HTML and CSS,which am currently learning with the help of online courses.</p>
+        <p class="computer-skills">I can design websites for all the needs using HTML,CSS and MERN which am currently learning with the help of online courses.</p>
       </div>
       <div class="skill-row">
         <img class="guitar" src="images/electric-guitar.png" alt="guitar-img">
@@ -45,7 +45,7 @@
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Killersville,North Africa.</h3>
+      <h3>Banashankari,Bengaluru.</h3>
       <p class="message-me">Love Guitars as much as I do? we will have a talk about how awesome they are!<br>We can code while talking about Guitars.</p>
       <a class="btn" href="mailto:shreyasbharadhwaj18@gmail.com">CONTACT ME</a>
     </div>
